# LightDrive

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy-pages.yaml  run-ruff.yaml
LightDrive/: fixture_editor.py  main.py  main.ui  style.qss  workspace.py  workspace_file_manager.py
LightDrive/Backend/: artnet.py  output.py  snippets.py  tcp_socket.py
LightDrive/FixtureEditor/: channel_editor.py  channel_editor.ui  channel_entry.py  fixture_dialogs.py  fixture_editor.py  fixture_editor.ui  open_fixture_dialog.py  save_error_dialog.py
LightDrive/Functions/: snippet_manager.py  ui.py
LightDrive/SceneEditor/: scene_editor.py  scene_editor.ui
LightDrive/Settings/: settings.py  settings.ui
LightDrive/TimelineEditor/: timeline_editor.py  timeline_editor.ui
LightDrive/Workspace/: workspace.ui
Visualizer/: Stage.tscn  camera.gd  camera.gd.uid  custom_camera.tscn  dmx_in.gd  dmx_manager.gd  dmx_receiver.gd  dmx_receiver.gd.uid  export_presets.cfg  globals.gd  globals.gd.uid  hud.gd  hud.tscn  icon.svg.import  openxr_action_map.tres  project.godot  stage.gd  stage.gd.uid  stage.tscn  vr_character.tscn
Visualizer/Assets/: demo_stage.ldvm  empty_stage.ldvm  moving_head.glb  moving_head.glb.import  moving_head.json  moving_head.ldv  moving_head.ldvf  scanner.ldv  scanner.ldvf
contributing/: index.html
docs/: contributing.md  index.md  visualizer.md
lightdrive/: index.html
search/: search_index.json
visualizer/: index.html
(+94 files in other folders)
