[project]
name = "LightDrive"
description = "Create Your Own Light Shows"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="Namester (Nmstr)", email="publicNamester@gmail.com" }
]
keywords = ["music", "light", "show", "light show", "lighting", "PySide6", "QT", "GUI"]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

    "Topic :: Artistic Software",
    "Topic :: Home Automation",
]
dependencies = [
    "PySide6",
    "stupidArtnet",
    "tinytag"
]
[project.urls]
Source = "https://github.com/Nmstr/LightDrive"
Issues = "https://github.com/Nmstr/LightDrive/issues"

[tool.ruff]
lint.select = ["E4", "E7", "E9", "F", "N8"]

[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["E712"]
